# riscv_trace_debugger

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml  release.yml
src/: buffered_connection.rs  cheriot_ibex_trace.rs  cpu.rs  ibex_trace.rs  logging.rs  machine.rs  main.rs  mem_sniffer.rs  memory.rs  riscv_arch.rs  trace.rs
src/gdb/: auxv.rs  breakpoints.rs  exec_file.rs  flash.rs  host_io.rs  lldb_register_info_override.rs  mod.rs  monitor_cmd.rs  reverse.rs  single_register_access.rs  single_thread_range_step.rs  single_thread_single_step.rs  tracepoints.rs
src/riscv/: mod.rs
