[package]
name = "riscv_trace_debugger"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
gdbstub = "0.7.8"
gdbstub_arch = "0.3.2"
goblin = "0.10.4"
log = "0.4.29"
num-traits = "0.2.19"
tokio = { version = "1.49.0", features = ["rt", "macros", "net", "sync", "io-util", "process"] }
